--- a/style.css
+++ b/style.css
@@ -2,10 +2,16 @@
   font-family: "Digital-7";
   src: url(./fonts/digital_7/digital-7.ttf);
 }
+
 body {
   background-color: black;
   font-family: "Digital-7", sans-serif;
   color: green;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 button {
@@ -45,4 +51,17 @@ button {
 
 #scissors:hover {
   background-image: url("./images/scissors.gif");
+}
+
+#restart {
+  font-size: 20px;
+  margin-top: 20px;
+}
+
+#results {
+  margin-top: 20px;
+}
+
+#score {
+  margin-top: 20px;
 }
